# Admission

./: Cargo.toml  LICENSE  README.md  Rocket.toml
migrations/init/: down.sql  up.sql
resources/: local.js  simple.css
src/: hash.rs  main.rs  pdf.rs
src/db/: mod.rs  models.rs  schema.rs
templates/: applicants.html.hbs  login.html.hbs  review.html.hbs  user.html.hbs
